--- a/css/style.css
+++ b/css/style.css
@@ -421,20 +421,20 @@
 /* -------------- */
 /* -------------- */
 .reviews {
+  padding: 6.25rem 0;
+  margin-bottom: 0.625rem;
   color: #fefefe;
-  padding: 100px 0;
-  margin-bottom: 10px;
   background-color: #332208;
 }
 
 .swiper-container {
   position: relative;
   overflow: hidden;
-  padding: 70px 0 60px;
+  padding: 4.375rem 0 3.75rem;
 }
 
 .swiper-slide {
-  height: 300px;
+  min-height: 18.75rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -485,6 +485,18 @@ span.swiper-pagination-bullet-active {
   width: 1rem;
   height: 1rem;
   opacity: 1;
+}
+
+/* -------------- */
+/* -------------- */
+.feedback {
+  padding: 6.25rem 0;
+}
+
+.feedback__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 /* -------------- */
