--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@
 
 [class*=__title] {
   font-family: Fira Sans;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 1.5rem;
+  line-height: 1.8125rem;
 }
 
 .wrapper {
@@ -99,7 +99,8 @@
 
 .main__section__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  justify-items: center;
 }
 
 .main__content {
@@ -234,7 +235,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 0.5rem;
+  gap: 0.625rem;
   top: 50%;
   right: 0;
   -webkit-transform: translateY(-50%);
@@ -243,19 +244,20 @@
 }
 
 .dot {
-  width: 0.375rem;
-  height: 0.375rem;
+  padding: 0.25rem;
   background-color: #332208;
   border-radius: 50%;
   cursor: pointer;
 }
 .dot.active {
-  width: 0.625rem;
-  height: 0.625rem;
+  padding: 0.375rem;
+  width: 0.5625rem;
+  height: 0.5625rem;
   background-color: #332208;
 }
 
 .copy__items {
+  padding-top: 1.875rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -274,13 +276,13 @@
 .rent {
   padding: 6.25rem 0;
 }
-.rent__inner {
-  -webkit-box-align: normal;
-      -ms-flex-align: normal;
-          align-items: normal;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 3.125rem;
+.rent_inner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 0));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 70px;
 }
 
 .rent__content {
@@ -295,6 +297,9 @@
 
 .rent__text:nth-child(2) {
   margin: 1.25rem 0;
+}
+.rent__text:nth-child(2):nth-of-type(2) {
+  margin-bottom: 50px;
 }
 
 .rent__item {
@@ -368,14 +373,14 @@
 }
 
 .benefits__img {
-  max-width: 600px;
+  max-width: 37.5rem;
 }
 
 .benefits__content {
   text-align: right;
 }
 .benefits__content__text {
-  padding-left: 38px;
+  padding-left: 2.375rem;
 }
 
 .benefits__content *:not(:last-child) {
@@ -494,11 +499,12 @@ span.swiper-pagination-bullet-active {
 
 .feedback__wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(540px, 1fr));
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   justify-items: center;
+  gap: 2.5rem;
 }
 
 .feedback__form {
@@ -510,22 +516,47 @@ span.swiper-pagination-bullet-active {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  padding: 0 92px;
+  padding: 0 5.375rem;
 }
 
 .form__text {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 
 .form__input {
-  padding-bottom: 18px;
+  padding-bottom: 1.125rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .form__input:not(:last-of-type) {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 .form__input:last-of-type {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
+}
+.form__input::-webkit-input-placeholder {
+  font-family: Roboto Condensed;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.form__input::-moz-placeholder {
+  font-family: Roboto Condensed;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.form__input:-ms-input-placeholder {
+  font-family: Roboto Condensed;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.form__input::-ms-input-placeholder {
+  font-family: Roboto Condensed;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.form__input::placeholder {
+  font-family: Roboto Condensed;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .form__btn {
@@ -533,12 +564,12 @@ span.swiper-pagination-bullet-active {
   width: -moz-fit-content;
   width: fit-content;
   text-align: center;
-  padding: 16px 36px;
+  padding: 1rem 2.25rem;
   background-color: #c5ac2d;
   color: #fefefe;
   text-transform: uppercase;
   font-family: Roboto Condensed;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   border: 1px solid transparent;
   -webkit-transition: all ease 0.4s;
@@ -561,7 +592,7 @@ span.swiper-pagination-bullet-active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 200px;
+  min-height: 12.5rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -576,6 +607,10 @@ span.swiper-pagination-bullet-active {
       flex-wrap: wrap;
   -ms-flex-line-pack: center;
       align-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 15px;
 }
 
 .social__link-items {
@@ -591,3 +626,98 @@ span.swiper-pagination-bullet-active {
 }
 
 /* ------- Footer ------- */
+/* ------- Adaptive page ------- */
+@media (max-width: 1250px) {
+  .main__section {
+    padding: 3.125rem 0;
+  }
+  .main__content {
+    padding-top: 3.125rem;
+  }
+  .rent {
+    padding: 0;
+  }
+  .benefits {
+    padding: 3.125rem 0;
+  }
+  .reviews {
+    padding: 3.125rem 0;
+  }
+  .feedback {
+    padding: 3.125rem 0;
+  }
+  .benefits__items {
+    margin-top: 0;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+  .benefits__content {
+    grid-column-start: 2;
+  }
+}
+@media (max-width: 950px) {
+  .main__content-items {
+    margin-top: 3.125rem;
+  }
+  .rent_inner {
+    gap: 2.5rem;
+  }
+  .benefits__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .benefits__content {
+    grid-column-start: 1;
+  }
+  .swiper-container {
+    padding: 2.5rem 0;
+  }
+}
+@media (max-width: 900px) {
+  .footer__inner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 650px) {
+  .main__content {
+    padding-top: 0%;
+  }
+  .main__content-items {
+    gap: 1.25rem;
+  }
+  .slide__img {
+    height: 350px;
+  }
+  .copy__items {
+    padding-top: 0;
+  }
+  .benefits__items {
+    gap: 0.9375rem;
+    grid-template-columns: minmax(21.25rem, 1fr);
+  }
+  .benefits__img {
+    width: 100%;
+  }
+  .feedback__wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  }
+  .feedback__form {
+    padding: 0 0.9375rem;
+  }
+  .feedback__images {
+    display: none;
+  }
+  .footer__inner {
+    padding-top: 1.25rem;
+  }
+  .menu__list {
+    gap: 15px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+/* ------- Adaptive page ------- */
