--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,8 +22,8 @@ $whiteColor: #fefefe;
 
 [class*="__title"] {
   font-family: Fira Sans;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 1.5rem;
+  line-height: 1.8125rem;
 }
 
 .wrapper {
@@ -88,7 +88,8 @@ $whiteColor: #fefefe;
 }
 .main__section__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  justify-items: center;
 }
 .main__content {
   padding-top: 4.6875rem;
@@ -173,24 +174,25 @@ $whiteColor: #fefefe;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.625rem;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
 }
 .dot {
-  width: 0.375rem;
-  height: 0.375rem;
+  padding: 0.25rem;
   background-color: #332208;
   border-radius: 50%;
   cursor: pointer;
   &.active {
-    width: 0.625rem;
-    height: 0.625rem;
+    padding: 0.375rem;
+    width: 0.5625rem;
+    height: 0.5625rem;
     background-color: #332208;
   }
 }
 .copy__items {
+  padding-top: 1.875rem;
   display: flex;
   gap: 1.25rem;
   justify-content: center;
@@ -202,10 +204,11 @@ $whiteColor: #fefefe;
 /* -------------- */
 .rent {
   padding: 6.25rem 0;
-  &__inner {
-    align-items: normal;
-    flex-wrap: wrap;
-    gap: 3.125rem;
+  &_inner {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 0));
+    justify-content: center;
+    gap: 70px;
   }
 }
 .rent__content {
@@ -219,6 +222,9 @@ $whiteColor: #fefefe;
 }
 .rent__text:nth-child(2) {
   margin: 1.25rem 0;
+  &:nth-of-type(2) {
+    margin-bottom: 50px;
+  }
 }
 .rent__item {
   padding: 0 1.875rem 1.125rem;
@@ -288,12 +294,12 @@ $whiteColor: #fefefe;
   background-color: #181818;
 }
 .benefits__img {
-  max-width: 600px;
+  max-width: 37.5rem;
 }
 .benefits__content {
   text-align: right;
   &__text {
-    padding-left: 38px;
+    padding-left: 2.375rem;
   }
 }
 .benefits__content *:not(:last-child) {
@@ -390,38 +396,44 @@ span.swiper-pagination-bullet-active {
 }
 .feedback__wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(540px, 1fr));
   align-items: center;
   justify-items: center;
+  gap: 2.5rem;
 }
 .feedback__form {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0 92px;
+  padding: 0 5.375rem;
 }
 .form__text {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 .form__input {
-  padding-bottom: 18px;
+  padding-bottom: 1.125rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   &:not(:last-of-type) {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
   &:last-of-type {
-    margin-bottom: 50px;
+    margin-bottom: 3.125rem;
+  }
+  &::placeholder {
+    font-family: Roboto Condensed;
+    font-size: 1rem;
+    font-weight: 400;
   }
 }
 .form__btn {
   width: fit-content;
   text-align: center;
-  padding: 16px 36px;
+  padding: 1rem 2.25rem;
   background-color: $accentColor;
   color: $whiteColor;
   text-transform: uppercase;
   font-family: Roboto Condensed;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   border: 1px solid transparent;
   transition: all ease 0.4s;
@@ -440,7 +452,7 @@ span.swiper-pagination-bullet-active {
   background-color: $corporateСolor;
   &__container {
     display: flex;
-    min-height: 200px;
+    min-height: 12.5rem;
     flex-direction: column;
     justify-content: flex-end;
     gap: 1.5625rem;
@@ -448,9 +460,10 @@ span.swiper-pagination-bullet-active {
   &__inner {
     flex-wrap: wrap;
     align-content: center;
+    justify-content: space-between;
+    gap: 15px;
   }
 }
-
 .social__link-items {
   display: flex;
   justify-content: center;
@@ -459,3 +472,94 @@ span.swiper-pagination-bullet-active {
   margin-bottom: 1.25rem;
 }
 /* ------- Footer ------- */
+
+/* ------- Adaptive page ------- */
+@media (max-width: 1250px) {
+  .main__section {
+    padding: 3.125rem 0;
+  }
+  .main__content {
+    padding-top: 3.125rem;
+  }
+  .rent {
+    padding: 0;
+  }
+  .benefits {
+    padding: 3.125rem 0;
+  }
+  .reviews {
+    padding: 3.125rem 0;
+  }
+  .feedback {
+    padding: 3.125rem 0;
+  }
+  .benefits__items {
+    margin-top: 0;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+  .benefits__content {
+    grid-column-start: 2;
+  }
+}
+@media (max-width: 950px) {
+  .main__content-items {
+    margin-top: 3.125rem;
+  }
+  .rent_inner {
+    gap: 2.5rem;
+  }
+  .benefits__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .benefits__content {
+    grid-column-start: 1;
+  }
+  .swiper-container {
+    padding: 2.5rem 0;
+  }
+}
+@media (max-width: 900px) {
+  .footer__inner {
+    justify-content: center;
+  }
+}
+@media (max-width: 650px) {
+  .main__content {
+    padding-top: 0%;
+  }
+  .main__content-items {
+    gap: 1.25rem;
+  }
+  .slide__img {
+    height: 350px;
+  }
+  .copy__items {
+    padding-top: 0;
+  }
+  .benefits__items {
+    gap: 0.9375rem;
+    grid-template-columns: minmax(21.25rem, 1fr);
+  }
+  .benefits__img {
+    width: 100%;
+  }
+  .feedback__wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  }
+  .feedback__form {
+    padding: 0 0.9375rem;
+  }
+  .feedback__images {
+    display: none;
+  }
+  .footer__inner {
+    padding-top: 1.25rem;
+  }
+  .menu__list {
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+/* ------- Adaptive page ------- */
