--- a/css/style.css
+++ b/css/style.css
@@ -40,25 +40,6 @@
   color: #fefefe;
 }
 
-.menu__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1.875rem;
-}
-.menu__list-link {
-  text-transform: uppercase;
-  color: #fefefe;
-  font-size: 1.125rem;
-  padding-bottom: 0.3125rem;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  border-bottom: 1px solid transparent;
-}
-.menu__list-link:hover {
-  border-bottom: 1px solid #fefefe;
-}
-
 .app-link {
   text-transform: uppercase;
   display: inline-block;
@@ -81,6 +62,25 @@
 }
 .header__inner {
   min-height: 6.25rem;
+}
+
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.875rem;
+}
+.menu__list-link {
+  text-transform: uppercase;
+  color: #fefefe;
+  font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
+}
+.menu__list-link:hover {
+  border-bottom: 1px solid #fefefe;
 }
 
 /* ------- Header ------- */
@@ -209,10 +209,6 @@
 
 .slide {
   text-align: center;
-  min-height: 30.125rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  position: relative;
 }
 .slide__img {
   width: 100%;
@@ -244,15 +240,15 @@
 }
 
 .dot {
-  padding: 0.25rem;
+  width: 6px;
+  height: 6px;
   background-color: #332208;
   border-radius: 50%;
   cursor: pointer;
 }
 .dot.active {
-  padding: 0.375rem;
-  width: 0.5625rem;
-  height: 0.5625rem;
+  width: 12px;
+  height: 12px;
   background-color: #332208;
 }
 
@@ -282,24 +278,23 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 70px;
+  gap: 4.375rem;
 }
 
 .rent__content {
   position: relative;
   max-width: 18.75rem;
 }
-.rent__content-link {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+
+.rent__text:last-of-type {
+  margin-bottom: 1.875rem;
 }
 
 .rent__text:nth-child(2) {
   margin: 1.25rem 0;
 }
 .rent__text:nth-child(2):nth-of-type(2) {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 
 .rent__item {
@@ -613,6 +608,31 @@ span.swiper-pagination-bullet-active {
   gap: 15px;
 }
 
+.footer__menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.875rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu__list-link {
+  text-transform: uppercase;
+  color: #fefefe;
+  font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
+}
+.menu__list-link-link:hover {
+  border-bottom: 1px solid #fefefe;
+}
+
 .social__link-items {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -628,6 +648,9 @@ span.swiper-pagination-bullet-active {
 /* ------- Footer ------- */
 /* ------- Adaptive page ------- */
 @media (max-width: 1250px) {
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  }
   .main__section {
     padding: 3.125rem 0;
   }
@@ -662,38 +685,77 @@ span.swiper-pagination-bullet-active {
   .rent_inner {
     gap: 2.5rem;
   }
+  .benefits {
+    padding: 3.125rem 0 0 0;
+  }
   .benefits__items {
+    gap: 0;
     grid-template-columns: repeat(1, 1fr);
   }
   .benefits__content {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
     grid-column-start: 1;
+    margin-top: 1.875rem;
+  }
+  .benefits__img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .benefits__list {
+    display: none;
   }
   .swiper-container {
     padding: 2.5rem 0;
   }
 }
 @media (max-width: 900px) {
+  .main__content-title {
+    font-size: 2.5rem;
+  }
+  .main__content-text {
+    font-size: 1.25rem;
+    margin: 0 auto 1.5625rem;
+  }
   .footer__inner {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .footer__menu-list {
+    gap: 1rem;
+  }
+  .menu__list-link {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 860px) {
+  .menu__list {
+    display: none;
+  }
 }
 @media (max-width: 650px) {
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  }
   .main__content {
     padding-top: 0%;
   }
+  .main__content-title {
+    font-size: 2rem;
+  }
+  .main__content-text {
+    font-size: 1.2rem;
+  }
   .main__content-items {
     gap: 1.25rem;
-  }
-  .slide__img {
-    height: 350px;
   }
   .copy__items {
     padding-top: 0;
   }
   .benefits__items {
-    gap: 0.9375rem;
     grid-template-columns: minmax(21.25rem, 1fr);
   }
   .benefits__img {
@@ -720,4 +782,133 @@ span.swiper-pagination-bullet-active {
             justify-content: center;
   }
 }
+@media (max-width: 560px) {
+  .slides {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .phone {
+    display: none;
+  }
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+  .main__content-items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  .copy__link {
+    font-size: 0.875rem;
+  }
+}
+@media (max-width: 375px) {
+  .main__slider-container {
+    position: relative;
+    max-width: 37.5rem;
+    height: 20.125rem;
+    overflow: hidden;
+  }
+  .slide__text {
+    font-size: 14px;
+  }
+  .copy__link {
+    font-size: 14px;
+  }
+  .benefits__content {
+    width: 320px;
+  }
+}
 /* ------- Adaptive page ------- */
+.menu {
+  position: relative;
+}
+
+.menu__icon {
+  display: none;
+  cursor: pointer;
+  width: 35px;
+  margin: 10px;
+}
+
+.menu__icon .bar {
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+@media (max-width: 860px) {
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    -webkit-transition: -webkit-transform 0.3s ease-out;
+    transition: -webkit-transform 0.3s ease-out;
+    transition: transform 0.3s ease-out;
+    transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+            transform: translateY(-100%);
+    overflow: hidden;
+    background: #332208;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 14px 0;
+  }
+  .menu__icon {
+    display: block;
+  }
+}
+@media (min-width: 861px) {
+  .menu__list {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .menu__icon {
+    display: none;
+  }
+}
+.menu__icon.active .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+      -ms-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.menu__icon.active .bar2 {
+  opacity: 0;
+}
+
+.menu__icon.active .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+      -ms-transform: rotate(45deg) translate(-8px, -8px);
+          transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.menu__list.active {
+  -webkit-transform: translateY(120px);
+      -ms-transform: translateY(120px);
+          transform: translateY(120px);
+}
