--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,22 +37,6 @@ $whiteColor: #fefefe;
   color: $whiteColor;
 }
 
-.menu__list {
-  display: flex;
-  gap: 1.875rem;
-  &-link {
-    text-transform: uppercase;
-    color: $whiteColor;
-    font-size: 1.125rem;
-    padding-bottom: 0.3125rem;
-    transition: all 0.4s;
-    border-bottom: 1px solid transparent;
-  }
-  &-link:hover {
-    border-bottom: 1px solid $whiteColor;
-  }
-}
-
 .app-link {
   text-transform: uppercase;
   display: inline-block;
@@ -74,6 +58,21 @@ $whiteColor: #fefefe;
     min-height: 6.25rem;
   }
 }
+.menu__list {
+  display: flex;
+  gap: 1.875rem;
+  &-link {
+    text-transform: uppercase;
+    color: $whiteColor;
+    font-size: 1.125rem;
+    padding-bottom: 0.3125rem;
+    transition: all 0.4s;
+    border-bottom: 1px solid transparent;
+  }
+  &-link:hover {
+    border-bottom: 1px solid $whiteColor;
+  }
+}
 /* ------- Header ------- */
 
 /* ------- Main ------- */
@@ -82,7 +81,6 @@ $whiteColor: #fefefe;
   flex: 1 1 auto;
 }
 /* -------------- */
-
 .main__section {
   padding: 3.75rem 0 6.25rem;
 }
@@ -139,6 +137,7 @@ $whiteColor: #fefefe;
   line-height: 1.1875rem;
 }
 /* -------------- */
+
 .main__slider {
   display: flex;
   flex-direction: column;
@@ -158,9 +157,6 @@ $whiteColor: #fefefe;
 }
 .slide {
   text-align: center;
-  min-height: 30.125rem;
-  box-sizing: border-box;
-  position: relative;
   &__img {
     width: 100%;
     object-fit: cover;
@@ -180,15 +176,15 @@ $whiteColor: #fefefe;
   transform: translateY(-50%);
 }
 .dot {
-  padding: 0.25rem;
-  background-color: #332208;
+  width: 6px;
+  height: 6px;
+  background-color: $corporateСolor;
   border-radius: 50%;
   cursor: pointer;
   &.active {
-    padding: 0.375rem;
-    width: 0.5625rem;
-    height: 0.5625rem;
-    background-color: #332208;
+    width: 12px;
+    height: 12px;
+    background-color: $corporateСolor;
   }
 }
 .copy__items {
@@ -208,22 +204,20 @@ $whiteColor: #fefefe;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 0));
     justify-content: center;
-    gap: 70px;
+    gap: 4.375rem;
   }
 }
 .rent__content {
   position: relative;
   max-width: 18.75rem;
-  &-link {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
+}
+.rent__text:last-of-type {
+  margin-bottom: 1.875rem;
 }
 .rent__text:nth-child(2) {
   margin: 1.25rem 0;
   &:nth-of-type(2) {
-    margin-bottom: 50px;
+    margin-bottom: 3.125rem;
   }
 }
 .rent__item {
@@ -464,6 +458,23 @@ span.swiper-pagination-bullet-active {
     gap: 15px;
   }
 }
+.footer__menu-list {
+  display: flex;
+  gap: 1.875rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.menu__list-link {
+  text-transform: uppercase;
+  color: $whiteColor;
+  font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
+  &-link:hover {
+    border-bottom: 1px solid $whiteColor;
+  }
+}
 .social__link-items {
   display: flex;
   justify-content: center;
@@ -475,6 +486,9 @@ span.swiper-pagination-bullet-active {
 
 /* ------- Adaptive page ------- */
 @media (max-width: 1250px) {
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  }
   .main__section {
     padding: 3.125rem 0;
   }
@@ -509,36 +523,71 @@ span.swiper-pagination-bullet-active {
   .rent_inner {
     gap: 2.5rem;
   }
+  .benefits {
+    padding: 3.125rem 0 0 0;
+  }
   .benefits__items {
+    gap: 0;
     grid-template-columns: repeat(1, 1fr);
   }
   .benefits__content {
+    order: 1;
     grid-column-start: 1;
+    margin-top: 1.875rem;
+  }
+  .benefits__img {
+    order: 2;
+  }
+  .benefits__list {
+    display: none;
   }
   .swiper-container {
     padding: 2.5rem 0;
   }
 }
 @media (max-width: 900px) {
+  .main__content-title {
+    font-size: 2.5rem;
+  }
+  .main__content-text {
+    font-size: 1.25rem;
+    margin: 0 auto 1.5625rem;
+  }
   .footer__inner {
     justify-content: center;
   }
+  .footer__menu-list {
+    gap: 1rem;
+  }
+  .menu__list-link {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 860px) {
+  .menu__list {
+    display: none;
+  }
 }
 @media (max-width: 650px) {
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  }
   .main__content {
     padding-top: 0%;
-  }
-  .main__content-items {
-    gap: 1.25rem;
-  }
-  .slide__img {
-    height: 350px;
+    &-title {
+      font-size: 2rem;
+    }
+    &-text {
+      font-size: 1.2rem;
+    }
+    &-items {
+      gap: 1.25rem;
+    }
   }
   .copy__items {
     padding-top: 0;
   }
   .benefits__items {
-    gap: 0.9375rem;
     grid-template-columns: minmax(21.25rem, 1fr);
   }
   .benefits__img {
@@ -562,4 +611,110 @@ span.swiper-pagination-bullet-active {
     justify-content: center;
   }
 }
+@media (max-width: 560px) {
+  .slides {
+    justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .phone {
+    display: none;
+  }
+  .main__section__container {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+  .main__content-items {
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  .copy__link {
+    font-size: 0.875rem;
+  }
+}
+@media (max-width: 375px) {
+  .main__slider-container {
+    position: relative;
+    max-width: 37.5rem;
+    height: 20.125rem;
+    overflow: hidden;
+  }
+  .slide__text {
+    font-size: 14px;
+  }
+  .copy__link {
+    font-size: 14px;
+  }
+  .benefits__content {
+    width: 320px;
+  }
+}
 /* ------- Adaptive page ------- */
+
+.menu {
+  position: relative;
+}
+
+.menu__icon {
+  display: none;
+  cursor: pointer;
+  width: 35px;
+  margin: 10px;
+}
+
+.menu__icon .bar {
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+@media (max-width: 860px) {
+  .menu__list {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: transform 0.3s ease-out;
+    transform: translateY(-100%);
+    overflow: hidden;
+    background: $corporateСolor;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 14px 0;
+  }
+
+  .menu__icon {
+    display: block;
+  }
+}
+
+@media (min-width: 861px) {
+  .menu__list {
+    transform: translateY(0);
+    display: flex;
+  }
+
+  .menu__icon {
+    display: none;
+  }
+}
+
+.menu__icon.active .bar1 {
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.menu__icon.active .bar2 {
+  opacity: 0;
+}
+
+.menu__icon.active .bar3 {
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.menu__list.active {
+  transform: translateY(120px);
+}
