--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,6 @@
   min-height: 100vh;
 }
 
-.phone {
-  font-size: 1.125rem;
-  color: #fefefe;
-}
-
 .app-link {
   text-transform: uppercase;
   display: inline-block;
@@ -64,6 +59,15 @@
   min-height: 6.25rem;
 }
 
+.phone {
+  font-size: 1.125rem;
+  color: #fefefe;
+}
+
+.menu__btn {
+  display: none;
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -80,6 +84,19 @@
   border-bottom: 1px solid transparent;
 }
 .menu__list-link:hover {
+  border-bottom: 1px solid #fefefe;
+}
+
+.menu__list-link {
+  text-transform: uppercase;
+  color: #fefefe;
+  font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
+}
+.menu__list-link-link:hover {
   border-bottom: 1px solid #fefefe;
 }
 
@@ -608,6 +625,11 @@ span.swiper-pagination-bullet-active {
   gap: 15px;
 }
 
+.footer__phone {
+  font-size: 1.125rem;
+  color: #fefefe;
+}
+
 .footer__menu-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -618,19 +640,6 @@ span.swiper-pagination-bullet-active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.menu__list-link {
-  text-transform: uppercase;
-  color: #fefefe;
-  font-size: 1.125rem;
-  padding-bottom: 0.3125rem;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  border-bottom: 1px solid transparent;
-}
-.menu__list-link-link:hover {
-  border-bottom: 1px solid #fefefe;
 }
 
 .social__link-items {
@@ -732,13 +741,65 @@ span.swiper-pagination-bullet-active {
   }
 }
 @media (max-width: 860px) {
-  .menu__list {
+  .phone {
     display: none;
+  }
+  .menu__list {
+    padding: 0.625rem 0;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 0;
+    position: absolute;
+    top: 6.5rem;
+    left: 0;
+    right: 0;
+    background-color: rgba(51, 34, 8, 0.85);
+    -webkit-transform: translateY(-200%);
+        -ms-transform: translateY(-200%);
+            transform: translateY(-200%);
+    -webkit-transition: all ease 0.6s;
+    transition: all ease 0.6s;
+  }
+  .menu__list-link {
+    display: block;
+    padding: 0.625rem 0;
+  }
+  .menu__list--active {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease 0.6s;
+    transition: all ease 0.6s;
+  }
+  .menu__btn {
+    position: relative;
+    display: block;
+    width: 2.125rem;
+    height: 1.5rem;
+    border: none;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .menu__btn::before {
+    content: "";
+    position: absolute;
+    width: 2.125rem;
+    height: 0.125rem;
+    background-color: #fff;
+    top: 0.5625rem;
   }
 }
 @media (max-width: 650px) {
   .main__section__container {
-    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(23.4375rem, 1fr));
   }
   .main__content {
     padding-top: 0%;
@@ -762,7 +823,7 @@ span.swiper-pagination-bullet-active {
     width: 100%;
   }
   .feedback__wrapper {
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(21.25rem, 1fr));
   }
   .feedback__form {
     padding: 0 0.9375rem;
@@ -774,7 +835,7 @@ span.swiper-pagination-bullet-active {
     padding-top: 1.25rem;
   }
   .menu__list {
-    gap: 15px;
+    gap: 0.9375rem;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
@@ -790,11 +851,8 @@ span.swiper-pagination-bullet-active {
   }
 }
 @media (max-width: 500px) {
-  .phone {
-    display: none;
-  }
   .main__section__container {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
   .main__content-items {
     -ms-flex-wrap: wrap;
@@ -813,102 +871,14 @@ span.swiper-pagination-bullet-active {
     overflow: hidden;
   }
   .slide__text {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .copy__link {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .benefits__content {
-    width: 320px;
+    width: 20rem;
   }
 }
 /* ------- Adaptive page ------- */
-.menu {
-  position: relative;
-}
-
-.menu__icon {
-  display: none;
-  cursor: pointer;
-  width: 35px;
-  margin: 10px;
-}
-
-.menu__icon .bar {
-  width: 100%;
-  height: 4px;
-  background-color: #fff;
-  margin: 6px 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 24px;
-}
-
-@media (max-width: 860px) {
-  .menu__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    -webkit-transition: -webkit-transform 0.3s ease-out;
-    transition: -webkit-transform 0.3s ease-out;
-    transition: transform 0.3s ease-out;
-    transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-    -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
-    overflow: hidden;
-    background: #332208;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 14px 0;
-  }
-  .menu__icon {
-    display: block;
-  }
-}
-@media (min-width: 861px) {
-  .menu__list {
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .menu__icon {
-    display: none;
-  }
-}
-.menu__icon.active .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-      -ms-transform: rotate(-45deg) translate(-9px, 6px);
-          transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.menu__icon.active .bar2 {
-  opacity: 0;
-}
-
-.menu__icon.active .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-      -ms-transform: rotate(45deg) translate(-8px, -8px);
-          transform: rotate(45deg) translate(-8px, -8px);
-}
-
-.menu__list.active {
-  -webkit-transform: translateY(120px);
-      -ms-transform: translateY(120px);
-          transform: translateY(120px);
-}
+/* ============================================= */
