--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,11 +32,6 @@ $whiteColor: #fefefe;
   min-height: 100vh;
 }
 
-.phone {
-  font-size: 1.125rem;
-  color: $whiteColor;
-}
-
 .app-link {
   text-transform: uppercase;
   display: inline-block;
@@ -58,6 +53,13 @@ $whiteColor: #fefefe;
     min-height: 6.25rem;
   }
 }
+.phone {
+  font-size: 1.125rem;
+  color: $whiteColor;
+}
+.menu__btn {
+  display: none;
+}
 .menu__list {
   display: flex;
   gap: 1.875rem;
@@ -69,6 +71,17 @@ $whiteColor: #fefefe;
     transition: all 0.4s;
     border-bottom: 1px solid transparent;
   }
+  &-link:hover {
+    border-bottom: 1px solid $whiteColor;
+  }
+}
+.menu__list-link {
+  text-transform: uppercase;
+  color: $whiteColor;
+  font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
   &-link:hover {
     border-bottom: 1px solid $whiteColor;
   }
@@ -458,22 +471,15 @@ span.swiper-pagination-bullet-active {
     gap: 15px;
   }
 }
+.footer__phone {
+  font-size: 1.125rem;
+  color: $whiteColor;
+}
 .footer__menu-list {
   display: flex;
   gap: 1.875rem;
   flex-wrap: wrap;
   justify-content: center;
-}
-.menu__list-link {
-  text-transform: uppercase;
-  color: $whiteColor;
-  font-size: 1.125rem;
-  padding-bottom: 0.3125rem;
-  transition: all 0.4s;
-  border-bottom: 1px solid transparent;
-  &-link:hover {
-    border-bottom: 1px solid $whiteColor;
-  }
 }
 .social__link-items {
   display: flex;
@@ -564,13 +570,54 @@ span.swiper-pagination-bullet-active {
   }
 }
 @media (max-width: 860px) {
-  .menu__list {
+  .phone {
     display: none;
+  }
+  .menu__list {
+    padding: 0.625rem 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    position: absolute;
+    top: 6.5rem;
+    left: 0;
+    right: 0;
+    background-color: rgb(51, 34, 8, 0.85);
+    transform: translateY(-200%);
+    transition: all ease 0.6s;
+    &-link {
+      display: block;
+      padding: 0.625rem 0;
+    }
+  }
+  .menu__list--active {
+    transform: translateY(0);
+    transition: all ease 0.6s;
+  }
+  .menu__btn {
+    position: relative;
+    display: block;
+    width: 2.125rem;
+    height: 1.5rem;
+    border: none;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    background-color: transparent;
+    cursor: pointer;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 2.125rem;
+      height: 0.125rem;
+      background-color: #fff;
+      top: 0.5625rem;
+    }
   }
 }
 @media (max-width: 650px) {
   .main__section__container {
-    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(23.4375rem, 1fr));
   }
   .main__content {
     padding-top: 0%;
@@ -594,7 +641,7 @@ span.swiper-pagination-bullet-active {
     width: 100%;
   }
   .feedback__wrapper {
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(21.25rem, 1fr));
   }
   .feedback__form {
     padding: 0 0.9375rem;
@@ -606,7 +653,7 @@ span.swiper-pagination-bullet-active {
     padding-top: 1.25rem;
   }
   .menu__list {
-    gap: 15px;
+    gap: 0.9375rem;
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -617,11 +664,8 @@ span.swiper-pagination-bullet-active {
   }
 }
 @media (max-width: 500px) {
-  .phone {
-    display: none;
-  }
   .main__section__container {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
   .main__content-items {
     flex-wrap: wrap;
@@ -639,82 +683,15 @@ span.swiper-pagination-bullet-active {
     overflow: hidden;
   }
   .slide__text {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .copy__link {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .benefits__content {
-    width: 320px;
+    width: 20rem;
   }
 }
 /* ------- Adaptive page ------- */
 
-.menu {
-  position: relative;
-}
-
-.menu__icon {
-  display: none;
-  cursor: pointer;
-  width: 35px;
-  margin: 10px;
-}
-
-.menu__icon .bar {
-  width: 100%;
-  height: 4px;
-  background-color: #fff;
-  margin: 6px 0;
-  transition: 0.4s;
-  border-radius: 24px;
-}
-
-@media (max-width: 860px) {
-  .menu__list {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    transition: transform 0.3s ease-out;
-    transform: translateY(-100%);
-    overflow: hidden;
-    background: $corporateСolor;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 14px 0;
-  }
-
-  .menu__icon {
-    display: block;
-  }
-}
-
-@media (min-width: 861px) {
-  .menu__list {
-    transform: translateY(0);
-    display: flex;
-  }
-
-  .menu__icon {
-    display: none;
-  }
-}
-
-.menu__icon.active .bar1 {
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.menu__icon.active .bar2 {
-  opacity: 0;
-}
-
-.menu__icon.active .bar3 {
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-.menu__list.active {
-  transform: translateY(120px);
-}
+/* ============================================= */
