--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,6 @@ $accentColor: #c5ac2d;
 $darkColor: #181818;
 $whiteColor: #fefefe;
 
-// body {
-//     font-family: "Fira Sans", sans-serif;
-// }
 [class*="__container"] {
   max-width: 76.875rem;
   padding: 0 0.625rem;
@@ -33,9 +30,9 @@ $whiteColor: #fefefe;
 }
 
 .app-link {
+  padding: 0.9375rem 1.125rem;
   text-transform: uppercase;
   display: inline-block;
-  padding: 0.9375rem 1.125rem;
   color: $whiteColor;
   background-color: $accentColor;
   border: 1px solid transparent;
@@ -99,7 +96,7 @@ $whiteColor: #fefefe;
 }
 .main__section__container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(23.4375rem, 1fr));
   justify-items: center;
 }
 .main__content {
@@ -189,14 +186,14 @@ $whiteColor: #fefefe;
   transform: translateY(-50%);
 }
 .dot {
-  width: 6px;
-  height: 6px;
+  width: 0.375rem;
+  height: 0.375rem;
   background-color: $corporateСolor;
   border-radius: 50%;
   cursor: pointer;
   &.active {
-    width: 12px;
-    height: 12px;
+    width: 0.75rem;
+    height: 0.75rem;
     background-color: $corporateСolor;
   }
 }
@@ -403,7 +400,7 @@ span.swiper-pagination-bullet-active {
 }
 .feedback__wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(540px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(33.75rem, 1fr));
   align-items: center;
   justify-items: center;
   gap: 2.5rem;
@@ -491,7 +488,7 @@ span.swiper-pagination-bullet-active {
 /* ------- Footer ------- */
 
 /* ------- Adaptive page ------- */
-@media (max-width: 1250px) {
+@media (max-width: 78.125rem) {
   .main__section__container {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   }
@@ -522,7 +519,7 @@ span.swiper-pagination-bullet-active {
     grid-column-start: 2;
   }
 }
-@media (max-width: 950px) {
+@media (max-width: 59.375rem) {
   .main__content-items {
     margin-top: 3.125rem;
   }
@@ -551,7 +548,7 @@ span.swiper-pagination-bullet-active {
     padding: 2.5rem 0;
   }
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .main__content-title {
     font-size: 2.5rem;
   }
@@ -615,7 +612,7 @@ span.swiper-pagination-bullet-active {
     }
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 40.625rem) {
   .main__section__container {
     grid-template-columns: repeat(auto-fit, minmax(23.4375rem, 1fr));
   }
@@ -658,12 +655,12 @@ span.swiper-pagination-bullet-active {
     justify-content: center;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 35rem) {
   .slides {
     justify-content: center;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 31.25rem) {
   .main__section__container {
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
@@ -675,7 +672,7 @@ span.swiper-pagination-bullet-active {
     font-size: 0.875rem;
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 23.4375rem) {
   .main__slider-container {
     position: relative;
     max-width: 37.5rem;
@@ -693,5 +690,3 @@ span.swiper-pagination-bullet-active {
   }
 }
 /* ------- Adaptive page ------- */
-
-/* ============================================= */
